# DCLC-AI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  USAGE_POLICY.md  pyproject.toml  requirements.txt  urls.txt
app/: __init__.py  config.py  desktop_main.py  desktop_ui.py  filter.py  inference.py  main.py  ui.py
configs/: base.yaml  config.example.yaml  inference.yaml  raw_default.txt  sinhala_corpus_sources.yaml  sinhala_corpus_sources_112gb.yaml  sinhala_corpus_sources_colab.yaml  train_125m_cpu.yaml  train_1b_colab.yaml  train_250m_gpu.yaml  train_2b_colab.yaml  train_2b_multimodal.yaml  train_2b_multimodal_hard.yaml  train_500m_colab.yaml
docs/: CORPUS_SOURCES.md  DCLC_MASTER_PLAN.md  EXPLICIT_SOURCES_REQUIRED.md  KAGGLE_READY.md  LAION_USAGE.md  RAW_TRAINING.md  RELEASE_CHECKLIST.md  URL_INGESTION_PIPELINE.md  USER_SOURCES_OPTIONAL.md  architecture.md  inference_guide.md  model_card.md  performance_tuning.md  roadmap.md  training_guide.md
scripts/: FIX_GPU_CODE_43.md  aggregate_sinhala_corpus.py  check_gpu.py  clear_training_data.py  cli.py  download_laion_images.py  download_sinhala_corpus.py  fetch_explicit_sources.py  fetch_laion_subset.py  fix_gpu.py  kaggle_full_run.py  kaggle_train_2b.py  kaggle_train_2b_multimodal.py  kaggle_train_2b_multimodal_hard.py  kaggle_train_both.py  merge_raw_data.py  requirements-ingestion.txt  run_full_pipeline.py  run_nvidia_smi_admin.bat  test_model.py  train.py  train_multimodal.py  train_sinhala_tokenizer.py  train_visual_tokenizer.py  train_visual_vq.py  url_crawler.py  (+2 more)
(+35 files in other folders)
