[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dclc-ai"
version = "0.1.0"
description = "Dual-Core Latent Composer — Sinhala text and image model"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.scripts]
dclc = "scripts.cli:main"

[project.optional-dependencies]
app = ["pyinstaller"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
